# sh3

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  project-config.json  repository.xml
blender/: demo.py  import.py  process.py  readme.md  requirements.txt  schema.py
blender-addon/: __init__.py
blender-addon/sh3_export/: export.py  schema.py
blender/postprocess/: __init__.py  meta.py  schema.py  utils.py
blender/postprocess/maps/: __init__.py  default.py  mall_real.py
cmake/: common.cmake  deps.cmake  dx.js
core/: CMakeLists.txt
core/core/: common.cpp  common.hpp  core.cpp  core.hpp  library.cpp  library.hpp  utils.cpp  utils.hpp
core/core/data/: data.cpp  data.hpp  ref-collection.cpp  ref-collection.hpp  render-chunk.cpp  render-chunk.hpp  schema.hpp  serialization.cpp  serialization.hpp  string-id.cpp  string-id.hpp
core/core/fs/: file.cpp  file.hpp  fs.hpp  path.cpp  path.hpp
core/core/input/: input.cpp  input.hpp
core/core/logic/: components.cpp  components.hpp  entity-system.cpp  entity-system.hpp  logic.cpp  logic.hpp
core/core/math/: mat.cpp  mat.hpp  math.cpp  math.hpp  numbers.hpp  vec.cpp  vec.hpp  vec2-inl.hpp  vec3-inl.hpp  vec4-inl.hpp
core/core/render/: data.hpp  render.cpp  render.hpp  shader-table.cpp  shader-table.hpp
core/core/render/gapi/: common.cpp  common.hpp  device.cpp  device.hpp  render-pipeline.cpp  render-pipeline.hpp  resources.cpp  resources.hpp  shader-compiler.cpp  shader-compiler.hpp
core/core/render/pass/: render-pass.cpp  render-pass.hpp
core/core/render/shaders/: shader-types-pre.hpp  shader-types.hpp
core/core/system/: message-queue.hpp  system.cpp  system.hpp  task-result.hpp  task.cpp  task.hpp  time.cpp  time.hpp
doc/: doc.md  todo.md
game/: CMakeLists.txt  main.cpp
game-cpp/: CMakeLists.txt
game-cpp/game/: main.cpp
game-cpp/game/components/: components.cpp  components.hpp
game-cpp/game/data/: data.cpp  data.hpp  serialization.cpp  serialization.hpp
game-cpp/game/subsys/: subsys.cpp  subsys.hpp
game-cpp/game/subsys/impl/: scene-manager.cpp
game-cpp/game/tasks/: load-scene.cpp  tasks.hpp
game-lib/: CMakeLists.txt
game-lib/game/components/: components.cpp  components.hpp
game/game/: Native.cs  main.cs
mesh-tool/: CMakeLists.txt  image.cpp  image.hpp  main.cpp  schema.hpp
scene-tool/: CMakeLists.txt  main.cpp  scene-tool.hpp  schema.cpp  schema.hpp
scene-tool/render-chunk/: image.cpp  image.hpp  mesh.cpp  mesh.hpp  render-chunk.cpp  render-chunk.hpp  texture.cpp  texture.hpp
scene-tool/scene/: meta-components.cpp  meta-components.hpp  meta.cpp  meta.hpp  process-scene.cpp  process-scene.hpp
scene-tool/util/: detect-changes.cpp  detect-changes.hpp
scripts/: collect-demo.ps1  convert-map.ps1  generate-definitions.ps1  generate-shader-definitions.ps1
tests/: CMakeLists.txt  main.cpp
tests/tests/: mat.cpp  math.cpp  string-id.cpp  vec.cpp
tests/unit_test_framework/: unit_test_framework.hpp
